# sonitas

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: flow.yaml
sonitas/: __init__.py  __main__.py  const.py  devices.py  exc.py  recorder.py  typestore.py
sonitas/pyaudiof/: __init__.py  const.py  manager.py  recorder.py
sonitas/similarity/: __init__.py  flow.py  scoring.py  transform.py
tasks/: __init__.py  config.py  linting.py  testing.py
tests/devices/: test_audio_device.py
tests/recorder/: test_recording.py
tests/similarity/scoring/: test_cosine_scoring.py
