[project]
name = "sonitas"
version = "0.1.0"
description = "Sonitas = Sonus (Sound) + Veritas (truth). Helps to identify and verify pre-recorded sounds"
authors = [
    {name = "HazardDede"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
invoke = "^2.2.0"
pylint = "^3.3.7"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
