[project]
name = "sonitas"
version = "0.1.0"
description = "Sonitas = Sonus (Sound) + Veritas (truth). Helps to identify and verify pre-recorded sounds"
authors = [
    {name = "HazardDede"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (>=2.0.0,<3.0.0)",
    "scipy (>=1.13.0,<2.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
invoke = "^2.2.0"
pylint = "^3.3.7"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
